Add list of usernames

--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
       }
     </style>
   </head>
+
   <body>
-    
+    <div class="users">
+      <h3>Click a username below to view thier timeline</h3>
+      <ul>
+        <li>shawndrost</li>
+        <li>sharksforcheap</li>
+        <li>mracus</li>
+        <li>douglascalhoun</li>
+      </ul>
+    </div>
     <button>Get New Twittles</button>
       <script>
       $(document).ready(function(){
